# crumbs

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
crumbs/: __init__.py  cli.py  digest.py  extractors.py  indexer.py  mcp.py  query.py  store.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/crumbs/: SKILL.md
tests/: test_crumbs.py
