[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crumbs-cli"
version = "0.2.0"
description = "Local, token-efficient cross-repo context for LLMs."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "crumbs" }]
keywords = ["llm", "context", "claude", "code", "repo", "tokens"]
dependencies = []

[project.scripts]
crumbs = "crumbs.cli:main"

[tool.setuptools]
packages = ["crumbs"]
